# CppLearningProcess

Section6/: CMakeLists.txt
Section6/BuiltInPrimitiveTypes/: main.cpp
Section6/GlobalVariables/: main.cpp
Section6/InitializingVariables/: main.cpp
Section6/SizeOfOperator/: main.cpp
