cmake_minimum_required(VERSION 3.23)
project(Section6)

set(CMAKE_CXX_STANDARD 14)

add_executable(InitializingVariables InitializingVariables/main.cpp)
add_executable(GlobalVariables GlobalVariables/main.cpp)
add_executable(BuiltInPrimitiveTypes BuiltInPrimitiveTypes/main.cpp)
add_executable(SizeOfOperator SizeOfOperator/main.cpp)
